--- a/client-app/pom.xml
+++ b/client-app/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>client-app</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Client app for the Instana NGINX Tracing demo</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
