--- a/server-app/pom.xml
+++ b/server-app/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>server-app</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Server app for the Instana NGINX Tracing demo</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
