Add 443 as default to endpoint port

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
           - instana-agent
     environment:
       - INSTANA_AGENT_ENDPOINT=${agent_endpoint}
-      - INSTANA_AGENT_ENDPOINT_PORT=${agent_endpoint_port}
+      - INSTANA_AGENT_ENDPOINT_PORT=${agent_endpoint_port:-443}
       - INSTANA_AGENT_KEY=${agent_key}
       - INSTANA_AGENT_ZONE=${agent_zone:-nginx-tracing-demo}
     expose:
