Fix default zone

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,7 @@ services:
       - INSTANA_AGENT_ENDPOINT=${agent_endpoint:?No agent endpoint provided}
       - INSTANA_AGENT_ENDPOINT_PORT=${agent_endpoint_port:-443}
       - INSTANA_AGENT_KEY=${agent_key:?No agent key provided}
-      - INSTANA_AGENT_ZONE=${agent_zone:-envoy-tracing-demo}
+      - INSTANA_AGENT_ZONE=${agent_zone:-nginx-tracing-demo}
     expose:
       - "42699"
 
