Use standard dynamic Docker image instead of test

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       - "8080"
 
   agent:
-    image: instana/agent:test
+    image: instana/agent
     pid: "host"
     privileged: true
     volumes:
