docker-compose: Fix env variable syntax
The ":?" syntax does not work with all Linux distributions. E.g.
it is unknown on openSUSE Leap 15.1. So avoid it.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,9 +52,9 @@ services:
         aliases:
           - instana-agent
     environment:
-      - INSTANA_AGENT_ENDPOINT=${agent_endpoint:?No agent endpoint provided}
+      - INSTANA_AGENT_ENDPOINT=${agent_endpoint:-saas-us-west-2.instana.io}
       - INSTANA_AGENT_ENDPOINT_PORT=${agent_endpoint_port:-443}
-      - INSTANA_AGENT_KEY=${agent_key:?No agent key provided}
+      - INSTANA_AGENT_KEY=${agent_key}
       - INSTANA_AGENT_ZONE=${agent_zone:-nginx-tracing-demo}
     expose:
       - "42699"
