--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,6 +2,8 @@ load_module modules/ngx_http_opentracing_module.so;
 
 events {}
 
+error_log /dev/stdout info;
+
 http {
   opentracing on;
   error_log /dev/stdout info;
@@ -12,13 +14,13 @@ http {
   }
 
   server {
-    error_log /var/log/nginx/debug.log debug;
+    error_log /dev/stdout info;
     listen 8080;
     server_name localhost;
 
     location /nginx_status {
- 	    stub_status;
- 	    allow all;    # don't ever push in production something like this :-)	
+       stub_status;
+       allow all;    # don't ever push in production something like this :-)
     }
 
     location ^~ / {
