--- a/nginx/instana-config.json
+++ b/nginx/instana-config.json
@@ -1,5 +1,6 @@
 {
   "service": "nginxtracing_nginx",
   "agent_host": "instana-agent",
-  "agent_port": 42699
+  "agent_port": 42699,
+  "max_buffered_spans": 1000
 }
