--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,6 +19,7 @@ http {
     server_name localhost;
 
     location /nginx_status {
+       opentracing_trace_locations off;
        stub_status;
        allow all;    # don't ever push in production something like this :-)
     }
