nginx/Dockerfile: Simplify updating of the NGINX version
There are two locations where the NGINX version is used. So put it
into an environment variable. Also be verbose about the sensor
version used.

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -10,6 +10,7 @@ RUN set -x \
 ARG agent_key
 
 ENV INSTANA_AGENT_KEY=${agent_key}
+ENV NGINX_VERSION=1.17.6
 
 # Add official Nginx repository
 RUN echo "deb http://nginx.org/packages/mainline/ubuntu/ bionic nginx" \
@@ -19,7 +20,7 @@ RUN echo "deb http://nginx.org/packages/mainline/ubuntu/ bionic nginx" \
 
 # Install Nginx from official Nginx repository
 RUN nginx_version=`apt-cache madison nginx | cut -d '|' -f2 \
-     | tr -d "[:blank:]" | grep 1\.17\.6` \
+     | tr -d "[:blank:]" | grep --fixed-strings "${NGINX_VERSION}"` \
   && apt-get install nginx=${nginx_version} \
   && rm -f /etc/nginx/nginx.conf \
   && rm -Rf /etc/nginx/conf.d
@@ -27,7 +28,8 @@ RUN nginx_version=`apt-cache madison nginx | cut -d '|' -f2 \
 # Download extension from Artifactory
 RUN arti_path=https://artifact-public.instana.io/artifactory/shared/com/instana/libinstana_sensor/; \
     sensor_version=$(lynx -auth _:${INSTANA_AGENT_KEY} -dump -listonly ${arti_path} | grep -o 'https:.*/[0-9]\+\.[0-9]\+\.[0-9]\+/' | rev | cut -d '/' -f 2 | rev | sort -V | tail -n1); \
+    echo "Using sensor version ${sensor_version} for NGINX ${NGINX_VERSION}."; \
     curl --user _:${INSTANA_AGENT_KEY} --silent --output /usr/local/lib/libinstana_sensor.so ${arti_path}${sensor_version}/linux-amd64-libinstana_sensor.so && \
-    curl --user _:${INSTANA_AGENT_KEY} --silent --output /usr/lib/nginx/modules/ngx_http_opentracing_module.so ${arti_path}${sensor_version}/linux-amd64-nginx-1.17.6-ngx_http_ot_module.so
+    curl --user _:${INSTANA_AGENT_KEY} --silent --output /usr/lib/nginx/modules/ngx_http_opentracing_module.so ${arti_path}${sensor_version}/linux-amd64-nginx-${NGINX_VERSION}-ngx_http_ot_module.so
 
 CMD ["/usr/sbin/nginx", "-g", "daemon off;"]
