nginx/Dockerfile: Download the zip bundle
If customers download the .so files separately, then this has the
chance of interoperability issues. So show the .zip bundle method
instead.

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -5,7 +5,7 @@ RUN set -x \
   && apt-get install --no-install-recommends --no-install-suggests -y \
               curl apt-transport-https iproute2 \
   && apt-get install --no-install-recommends --no-install-suggests -y \
-              lynx curl ca-certificates gnupg2
+              lynx curl ca-certificates gnupg2 unzip
 
 ARG agent_key
 
@@ -26,10 +26,14 @@ RUN nginx_version=`apt-cache madison nginx | cut -d '|' -f2 \
   && rm -Rf /etc/nginx/conf.d
 
 # Download extension from Artifactory
-RUN arti_path=https://artifact-public.instana.io/artifactory/shared/com/instana/libinstana_sensor/; \
+RUN arti_path=https://artifact-public.instana.io/artifactory/shared/com/instana/nginx_tracing/; \
     sensor_version=$(lynx -auth _:${INSTANA_AGENT_KEY} -dump -listonly ${arti_path} | grep -o 'https:.*/[0-9]\+\.[0-9]\+\.[0-9]\+/' | rev | cut -d '/' -f 2 | rev | sort -V | tail -n1); \
     echo "Using sensor version ${sensor_version} for NGINX ${NGINX_VERSION}."; \
-    curl --user _:${INSTANA_AGENT_KEY} --silent --output /usr/local/lib/libinstana_sensor.so ${arti_path}${sensor_version}/linux-amd64-libinstana_sensor.so && \
-    curl --user _:${INSTANA_AGENT_KEY} --silent --output /usr/lib/nginx/modules/ngx_http_opentracing_module.so ${arti_path}${sensor_version}/linux-amd64-nginx-${NGINX_VERSION}-ngx_http_ot_module.so
+    tmp_file="tmp.zip"; tmp_dir="/tmp/nginx_tracing"; mkdir -p "${tmp_dir}" && cd "${tmp_dir}" && \
+    curl --user _:${INSTANA_AGENT_KEY} --silent --output ${tmp_file} ${arti_path}${sensor_version}/linux-amd64-glibc-nginx-${NGINX_VERSION}.zip && \
+    unzip ${tmp_file} && \
+    mv glibc-libinstana_sensor.so /usr/local/lib/libinstana_sensor.so && \
+    mv glibc-nginx-${NGINX_VERSION}-ngx_http_ot_module.so /usr/lib/nginx/modules/ngx_http_opentracing_module.so; \
+    cd ~; rm -Rf "${tmp_dir}"
 
 CMD ["/usr/sbin/nginx", "-g", "daemon off;"]
