--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,7 +20,8 @@ http {
     server_name localhost;
 
     location /nginx_status {
-      stub_status;
+      stub_status on;
+      access_log off;
       allow all;    # don't ever push in production something like this :-)
     }
 
