Use multi-stage builds to simplify build command
Use multi-stage docker builds to get better reproducible
and simpler builds for client-app and server-app. Java is no
longer required on the host.
Also upgrade from NGINX 1.21.1 to 1.21.6 and fix the Ubuntu code
name used for the official NGINX Ubuntu repository.

--- a/client-app/Dockerfile
+++ b/client-app/Dockerfile
@@ -1,5 +1,19 @@
-FROM openjdk:8-jdk-alpine
+FROM openjdk:11-jdk-slim AS nginx-tracing-client-app-build
+
+ENV DEBIAN_FRONTEND=noninteractive
+RUN apt-get update -y && apt-get install -y --no-install-recommends --no-install-suggests \
+    curl \
+    ca-certificates
+
+WORKDIR /opt/client-app/
+COPY . .
+RUN ./mvnw clean package
+
+FROM openjdk:11-jre-slim
+
 VOLUME /tmp
+WORKDIR /opt/client-app/
 ARG JAR_FILE=target/client-app-1.0.0.RELEASE.jar
-ADD ${JAR_FILE} app.jar
+COPY --from=nginx-tracing-client-app-build /opt/client-app/${JAR_FILE} ./app.jar
+
 ENTRYPOINT ["java","-jar","app.jar"]
