docker-compose: mount a local Nginx module
Modify docker-compose file to run the testing with a locally
compiled Nginx module, found in nginx/ngx_http_opentracing_module.so.
Local development and testing of a module can highly benefit from this
light change. The mounting of the module can be enabled uncommenting
this option.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,9 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/instana-config.json:/etc/instana-config.json
+      # Include the following lines to override the nginx module, for local testing
+      #- ./nginx/ngx_http_opentracing_module.so:/opt/instana/nginx/ngx_http_opentracing_module.so
+      #- ./nginx/ngx_http_opentracing_module.so:/usr/lib/nginx/modules/ngx_http_opentracing_module.so
     expose:
       - "8080"
 
