--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,32 +1,1 @@
-load_module modules/ngx_http_opentracing_module.so;
-
-events {}
-
-error_log /dev/stdout info;
-
-http {
-  error_log /dev/stdout info;
-
-  opentracing_load_tracer /usr/local/lib/instana/libinstana_sensor.so /etc/instana-config.json;
-  opentracing_propagate_context;
-
-  upstream backend {
-    server server-app:8080;
-  }
-
-  server {
-    error_log /dev/stdout info;
-    listen 8080;
-    server_name localhost;
-
-    location /nginx_status {
-      stub_status on;
-      access_log off;
-      allow all;    # don't ever push in production something like this :-)
-    }
-
-    location ^~ / {
-      proxy_pass http://backend;
-    }
-  }
-}
+nginx.conf.location_enabled
