nginx: Dockerfile: Bump to Ubuntu 24.04
Just be more future ready for this. New deployments are usually done
with latest OS releases.
Also install and use the `lsb-release` package to get the OS codename
automatically.

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:22.04 AS tracing_dependencies
+FROM ubuntu:24.04 AS tracing_dependencies
 
 RUN set -x \
   && apt-get update \
@@ -29,17 +29,17 @@ RUN download_key=$([ ! -z "${INSTANA_DOWNLOAD_KEY}" ] && echo "${INSTANA_DOWNLOA
     mv ${LIBC_VERSION}-libinstana_sensor.so /opt/instana/nginx/libinstana_sensor.so && \
     mv ${LIBC_VERSION}-nginx-${NGINX_VERSION}-ngx_http_ot_module.so /opt/instana/nginx/ngx_http_opentracing_module.so;
 
-FROM ubuntu:22.04
+FROM ubuntu:24.04
 
 RUN set -x \
   && apt-get update \
   && apt-get install --no-install-recommends --no-install-suggests -y \
-              curl apt-transport-https ca-certificates iproute2 gnupg2 cron libpopt0 logrotate
+              curl apt-transport-https ca-certificates iproute2 gnupg2 cron libpopt0 logrotate lsb-release
 
 # Add official Nginx repositories
-RUN echo "deb http://nginx.org/packages/mainline/ubuntu/ jammy nginx" \
+RUN echo "deb http://nginx.org/packages/mainline/ubuntu/ $(lsb_release -sc) nginx" \
      >> /etc/apt/sources.list \
-  && echo "deb http://nginx.org/packages/ubuntu/ jammy nginx" \
+  && echo "deb http://nginx.org/packages/ubuntu/ $(lsb_release -sc) nginx" \
      >> /etc/apt/sources.list \
   && curl -fsSL https://nginx.org/keys/nginx_signing.key | apt-key add - \
   && apt-get update
