nginx.conf: Whitelist tracer config env vars
Just whitelist the tracer configuration environment variables.
Those take precedence over the values in instana-config.json.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,6 +4,14 @@ events {}
 
 error_log /dev/stdout info;
 
+# Whitelist environment variables used for tracer configuration to avoid
+# that NGINX wipes them. Takes precedence over instana-config.json.
+env INSTANA_SERVICE_NAME;
+env INSTANA_AGENT_HOST;
+env INSTANA_AGENT_PORT;
+env INSTANA_MAX_BUFFERED_SPANS;
+env INSTANA_DEV;
+
 http {
   error_log /dev/stdout info;
 
